# ImageProof

./: .env.example  .env.local  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  agents.md  auth.php  composer.json  config.php  download_zip.php  faq.html  functions.php  image_actions.php  index.php  login.php  logout.php  metadata_extractor.php  my_licenses.php  my_watermarks.php  patch.patch  process.php  process_helpers.php  project_structure_and_file_guide.md  pyproject.toml  rate_limiter.php  register.php  schema.sql  schema_apply.sql  seed_data.sql  store_data.php
.github/: CODEOWNERS  settings.yml
.github/workflows/: ci.yaml
COPY/: README.md  test_certificate.py
app/: app.py  auth.php  certificate.py  config.php  config.py  functions.php  image_processing.py  logging_utils.py  models.py  routes_admin.py  routes_files.py  routes_install.py  routes_installer.py  routes_member.py  routes_public.py  routes_stub.py  security.py  watermark.py
app/jobs/: store_data.php
app/python/: generate_hvf.py
app/tools/: metadata_extractor.php  process_helpers.php
core/auth/: AuthService.php  auth.php  rate_limiter.php
core/config/: config.php
core/dao/: UserDAO.php
core/database/: pixlkey_schema.sql
core/helpers/: functions.php
core/metadata/: metadata_extractor.php
core/processing/: process_helpers.php  store_data.php
core/security/: CsrfToken.php
core/session/: SessionBootstrap.php
db/: 2025-01-05-create_infinite_image_tools.sql  index.php  schema.full.sql
documents/: ROADMAP.md  SECURITY_HARDENING.md  agents.md
logs/: index.php
public/: download_zip.php  index.php  login.php  logout.php  my_licenses.php  my_watermarks.php  process.php  register.php
static/: main.js  styles.css
templates/: account_settings.html  admin_dashboard.html  agents.md  base.html  dashboard.html  flagged_detail.html  flagged_list.html  image_detail.html  index.html  install.html  login.html  logs.html  lookup_results.html  manage_overlays.html  register_guest.html  register_image.html  signup.html  stub.html  upload.html
tests/: test_auth_pages.py  test_certificate.py  test_config.py  test_first_run.py  test_hash_functions.py  test_image_pipeline.py  test_smoke.py  test_watermark.py
tools/: index.php  watermark.php
uploads/: index.php
(+1 files in other folders)
