[project]
name = "imageproof"
version = "0.1.0"
description = "Secure image fingerprinting, watermarking, and certification service"
authors = [
  { name = "Jeff Weese", email = "jweese74@example.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "flask",
  "imagehash",
  "mysql-connector-python",
  "numpy",
  "opencv-python-headless",
  "pillow",
  "python-barcode",
  "python-dotenv",
  "python-magic",
  "qrcode",
  "reportlab",
  "sqlalchemy>=2.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "black",
  "isort",
  "bandit",
  "mypy",
  "types-pillow",
  "types-requests",
  "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
show_error_codes = true

[tool.bandit]
skips = ["B101"]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
